<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.MainActivity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/baseSpinnerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/baseSpinnerLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/select_base_formate"
            android:textColorHint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_binary_code"
            app:startIconTint="@color/teal_700">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/baseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textAllCaps="true"
                android:textColor="@color/teal_700"
                android:longClickable="false"
                android:cursorVisible="false"
                tools:ignore="KeyboardInaccessibleWidget" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/binary"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/binary"
            app:tint="@color/teal_200" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_your_format_value"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:boxStrokeColor="@color/teal_700"
            app:placeholderTextColor="@color/teal_700"
            app:counterTextColor="@color/teal_700"
            app:startIconDrawable="@drawable/ic_input"
            app:startIconTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseSpinnerLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="@color/teal_700"
                android:longClickable="false"
                android:cursorVisible="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/convertButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTextField"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutDecimal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTextDecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal_txt"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTextDataDecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivCopyDecimal"
                    app:layout_constraintStart_toEndOf="@+id/tvTextDecimal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="12345" />

                <ImageView
                    android:id="@+id/ivCopyDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_content_copy"
                    app:tint="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutBinary"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutDecimal">

                <TextView
                    android:id="@+id/tvTextBinary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/binary_txt"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTextDataBinary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivCopyBinary"
                    app:layout_constraintStart_toEndOf="@+id/tvTextBinary"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="11001011" />

                <ImageView
                    android:id="@+id/ivCopyBinary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_content_copy"
                    app:tint="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutOctal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBinary">

                <TextView
                    android:id="@+id/tvTextOctal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/octal_txt"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTextDataOctal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivCopyOctal"
                    app:layout_constraintStart_toEndOf="@+id/tvTextOctal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1234570" />

                <ImageView
                    android:id="@+id/ivCopyOctal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_content_copy"
                    app:tint="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutHexadecimal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutOctal">

                <TextView
                    android:id="@+id/tvTextHexadecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hexadecimal_txt"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTextDataHexadecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivCopyHexadecimal"
                    app:layout_constraintStart_toEndOf="@+id/tvTextHexadecimal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="00345AF" />

                <ImageView
                    android:id="@+id/ivCopyHexadecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_content_copy"
                    app:tint="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/convertButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/convert"
            android:backgroundTint="@color/teal_700"
            app:icon="@drawable/ic_recycle"
            app:iconGravity="end"
            app:iconPadding="-24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>